--- a/src/main/resources/templates/content-permission-list.html
+++ b/src/main/resources/templates/content-permission-list.html
@@ -137,6 +137,8 @@
                                 <td class="text-center">
                                     <a th:href="@{'/permission/query?id='+${permission.id}}"
                                        class="btn bg-olive btn-xs">修改</a>
+                                    <a th:href="@{'/permission/delete?ids='+${permission.id}}"
+                                       class="btn bg-olive btn-xs">删除</a>
                                 </td>
                             </tr>
                             </tbody>
