--- a/src/main/resources/templates/content-permission-list.html
+++ b/src/main/resources/templates/content-permission-list.html
@@ -136,9 +136,9 @@
                                 <td th:text="${permission.url}"></td>
                                 <td class="text-center">
                                     <a th:href="@{'/permission/query?id='+${permission.id}}"
-                                       class="btn bg-olive btn-xs">修改</a>
+                                       class="btn bg-blue btn-xs">修改</a>
                                     <a th:href="@{'/permission/delete?ids='+${permission.id}}"
-                                       class="btn bg-olive btn-xs">删除</a>
+                                       class="btn bg-red btn-xs">删除</a>
                                 </td>
                             </tr>
                             </tbody>
