--- a/src/main/resources/templates/content-role-permission-manage.html
+++ b/src/main/resources/templates/content-role-permission-manage.html
@@ -4,7 +4,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>权限添加</title>
+    <title>角色权限管理</title>
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
@@ -70,14 +70,14 @@
         <section class="content-header">
             <h1>
                 角色管理
-                <small>角色添加权限</small>
+                <small>角色权限管理</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
                         href="/role/findAll">角色管理</a></li>
-                <li class="active">角色添加权限</li>
+                <li class="active">角色权限管理</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
