--- a/src/main/resources/templates/content-role-list.html
+++ b/src/main/resources/templates/content-role-list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- 页面meta -->
@@ -8,51 +8,28 @@
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
-    <meta
-            content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
-            name="viewport">
-    <link rel="stylesheet"
-          href="/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet"
-          href="/plugins/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet"
-          href="/plugins/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet"
-          href="/plugins/iCheck/square/blue.css">
-    <link rel="stylesheet"
-          href="/plugins/morris/morris.css">
-    <link rel="stylesheet"
-          href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
-    <link rel="stylesheet"
-          href="/plugins/datepicker/datepicker3.css">
-    <link rel="stylesheet"
-          href="/plugins/daterangepicker/daterangepicker.css">
-    <link rel="stylesheet"
-          href="/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-    <link rel="stylesheet"
-          href="/plugins/datatables/dataTables.bootstrap.css">
-    <link rel="stylesheet"
-          href="/plugins/treeTable/jquery.treetable.css">
-    <link rel="stylesheet"
-          href="/plugins/treeTable/jquery.treetable.theme.default.css">
-    <link rel="stylesheet"
-          href="/plugins/select2/select2.css">
-    <link rel="stylesheet"
-          href="/plugins/colorpicker/bootstrap-colorpicker.min.css">
-    <link rel="stylesheet"
-          href="/plugins/bootstrap-markdown/css/bootstrap-markdown.min.css">
-    <link rel="stylesheet"
-          href="/plugins/adminLTE/css/AdminLTE.css">
-    <link rel="stylesheet"
-          href="/plugins/adminLTE/css/skins/_all-skins.min.css">
-    <link rel="stylesheet"
-          href="/css/style.css">
-    <link rel="stylesheet"
-          href="/plugins/ionslider/ion.rangeSlider.css">
-    <link rel="stylesheet"
-          href="/plugins/ionslider/ion.rangeSlider.skinNice.css">
-    <link rel="stylesheet"
-          href="/plugins/bootstrap-slider/slider.css">
+    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
+    <link rel="stylesheet" href="/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/plugins/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/plugins/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="/plugins/iCheck/square/blue.css">
+    <link rel="stylesheet" href="/plugins/morris/morris.css">
+    <link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+    <link rel="stylesheet" href="/plugins/datepicker/datepicker3.css">
+    <link rel="stylesheet" href="/plugins/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="/plugins/datatables/dataTables.bootstrap.css">
+    <link rel="stylesheet" href="/plugins/treeTable/jquery.treetable.css">
+    <link rel="stylesheet" href="/plugins/treeTable/jquery.treetable.theme.default.css">
+    <link rel="stylesheet" href="/plugins/select2/select2.css">
+    <link rel="stylesheet" href="/plugins/colorpicker/bootstrap-colorpicker.min.css">
+    <link rel="stylesheet" href="/plugins/bootstrap-markdown/css/bootstrap-markdown.min.css">
+    <link rel="stylesheet" href="/plugins/adminLTE/css/AdminLTE.css">
+    <link rel="stylesheet" href="/plugins/adminLTE/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/plugins/ionslider/ion.rangeSlider.css">
+    <link rel="stylesheet" href="/plugins/ionslider/ion.rangeSlider.skinNice.css">
+    <link rel="stylesheet" href="/plugins/bootstrap-slider/slider.css">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
@@ -145,16 +122,6 @@
                                 </td>
                             </tr>
                             </tbody>
-                            <!--
-                            <tfoot>
-                            <tr>
-                            <th>Rendering engine</th>
-                            <th>Browser</th>
-                            <th>Platform(s)</th>
-                            <th>Engine version</th>
-                            <th>CSS grade</th>
-                            </tr>
-                            </tfoot>-->
                         </table>
                         <!--数据列表/-->
                     </div>
