--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -14,82 +14,200 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-                <!--消息-->
-                <li class="dropdown messages messages-menu">
+                <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
-                        <span class="label label-success"> 4 </span>
+                        <span class="label label-success">4</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">您有4条消息</li>
+                        <li class="header">你有4个邮件</li>
                         <li>
+                            <!-- inner menu: contains the actual data -->
                             <ul class="menu">
+                                <li>
+                                    <!-- start message -->
+                                    <a href="#">
+                                        <div class="pull-left">
+                                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                        </div>
+                                        <h4>
+                                            系统消息
+                                            <small><i class="fa fa-clock-o"></i> 5 分钟前</small>
+                                        </h4>
+                                        <p>欢迎登录系统?</p>
+                                    </a>
+                                </li>
+                                <!-- end message -->
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="/img/user2-160x160.jpg" class="img-circle" alt="用户图片">
+                                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
-                                            艾瑞克
-                                            <small><i class="fa fa-clock-o"> </i>5分钟</small>
+                                            团队消息
+                                            <small><i class="fa fa-clock-o"></i> 2 小时前</small>
                                         </h4>
-                                        <p>do you finish that document?</p>
+                                        <p>你有新的任务了</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <div class="pull-left">
+                                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                        </div>
+                                        <h4>
+                                            Developers
+                                            <small><i class="fa fa-clock-o"></i> Today</small>
+                                        </h4>
+                                        <p>Why not buy a new awesome theme?</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <div class="pull-left">
+                                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                                        </div>
+                                        <h4>
+                                            Sales Department
+                                            <small><i class="fa fa-clock-o"></i> Yesterday</small>
+                                        </h4>
+                                        <p>Why not buy a new awesome theme?</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <div class="pull-left">
+                                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                        </div>
+                                        <h4>
+                                            Reviewers
+                                            <small><i class="fa fa-clock-o"></i> 2 days</small>
+                                        </h4>
+                                        <p>Why not buy a new awesome theme?</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="footer"><a href="#">查看所有消息</a></li>
+                        <li class="footer"><a href="#">See All Messages</a></li>
                     </ul>
                 </li>
-                <!--通知-->
-                <li class="dropdown notifications notifications-menu">
+                <!-- Notifications: style can be found in dropdown.less -->
+                <li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-bell-o"> </i>
-                        <span class="label label-warning"> 10 </span>
+                        <i class="fa fa-bell-o"></i>
+                        <span class="label label-warning">10</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">您有10条通知</li>
+                        <li class="header">你有10个新消息</li>
                         <li>
+                            <!-- inner menu: contains the actual data -->
                             <ul class="menu">
                                 <li>
                                     <a href="#">
-                                        <i class="ion ion-ios-people info"></i>您的快递已发出。
+                                        <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-warning text-yellow"></i> Very long description here that may not
+                                        fit into the page and may cause design problems
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-users text-red"></i> 5 new members joined
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-shopping-cart text-green"></i> 25 sales made
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-user text-red"></i> You changed your username
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="footer"><a href="#">查看所有通知</a></li>
+                        <li class="footer"><a href="#">View all</a></li>
                     </ul>
                 </li>
-                <!--任务-->
-                <li class="dropdown tasks tasks-menu">
+                <!-- Tasks: style can be found in dropdown.less -->
+                <li class="dropdown tasks-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-flag-o"> </i>
-                        <span class="label label-danger"> 9 </span>
+                        <i class="fa fa-flag-o"></i>
+                        <span class="label label-danger">9</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">您有9个任务</li>
+                        <li class="header">你有9个新任务</li>
                         <li>
+                            <!-- inner menu: contains the actual data -->
                             <ul class="menu">
                                 <li>
+                                    <!-- Task item -->
                                     <a href="#">
                                         <h3>
-                                            生成中...
+                                            Design some buttons
                                             <small class="pull-right">20%</small>
                                         </h3>
                                         <div class="progress xs">
-                                            <div class="progress-bar progress-bar-aqua" style="width:20%"
-                                                 role="progressbar" aria-valuenow="20" aria-valuemin="0"
-                                                 aria-valuemax="100">
-                                                <span class="sr-only">完成20%</span>
+                                            <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                                <span class="sr-only">20% Complete</span>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
+                                <!-- end task item -->
+                                <li>
+                                    <!-- Task item -->
+                                    <a href="#">
+                                        <h3>
+                                            Create a nice theme
+                                            <small class="pull-right">40%</small>
+                                        </h3>
+                                        <div class="progress xs">
+                                            <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                                <span class="sr-only">40% Complete</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <!-- end task item -->
+                                <li>
+                                    <!-- Task item -->
+                                    <a href="#">
+                                        <h3>
+                                            Some task I need to do
+                                            <small class="pull-right">60%</small>
+                                        </h3>
+                                        <div class="progress xs">
+                                            <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                                <span class="sr-only">60% Complete</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <!-- end task item -->
+                                <li>
+                                    <!-- Task item -->
+                                    <a href="#">
+                                        <h3>
+                                            Make beautiful transitions
+                                            <small class="pull-right">80%</small>
+                                        </h3>
+                                        <div class="progress xs">
+                                            <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                                <span class="sr-only">80% Complete</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <!-- end task item -->
                             </ul>
                         </li>
                         <li class="footer">
-                            <a href="#">查看所有任务</a>
+                            <a href="#">View all tasks</a>
                         </li>
                     </ul>
                 </li>
@@ -97,7 +215,7 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">hyosung</span>
+                        <span id="username1" class="hidden-xs"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
@@ -105,7 +223,7 @@
                             <img src="/img/user2-160x160.jpg" class="imgcircle"
                                  alt="User Image">
                             <p>
-                                hyosung - 系统管理员
+                                <span id="username2"></span> - 系统管理员
                                 <small>最后登录 11:20AM</small>
                             </p>
                         </li>
@@ -124,4 +242,9 @@
             </ul>
         </div>
     </nav>
+    <script>
+        var username = window.localStorage.getItem("username");
+        document.getElementById('username1').innerText=username;
+        document.getElementById('username2').innerText=username;
+    </script>
 </header>
