--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -7,7 +7,7 @@
                 <img src="/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>hyosung</p>
+                <p><span id="username3"></span></p>
                 <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
             </div>
         </div>
@@ -66,4 +66,8 @@
         </ul>
     </section>
     <!-- /.sidebar -->
+    <script>
+        var username = window.localStorage.getItem("username");
+        document.getElementById('username3').innerText=username;
+    </script>
 </aside>
